Changed the code for switching images on hover

--- a/ProductRange.html
+++ b/ProductRange.html
@@ -137,25 +137,25 @@
 
            <div class = "row firstrow">
 
-            <div class = "col-lg-4">
+            <div class = "col-lg-4 product-range-bread">
 
-                <img src = "pics/productrange_pics/everyday700.jpg" onmouseover = "setNewImageOne()" onmouseout = "setOldImageOne()" id = "image1">
+                <img src = "pics/productrange_pics/everyday700.jpg">
                 <h5>Brown Bread 700g</h5>
                 <p>Barcode: 6009692190222</p>
 
             </div>
 
-            <div class = "col-lg-4">
+            <div class = "col-lg-4 product-range-bread">
 
-                <img src = "pics/productrange_pics/unsliced_NEW.jpg" onmouseover = "setNewImageTwo()" onmouseout = "setOldImageTwo()" id = "image2">
+                <img src = "pics/productrange_pics/unsliced_NEW.jpg">
                 <h5>Brown Unsliced Bread 700g</h5>
                 <p>Barcode: 6009692190215</p>
 
             </div>
 
-            <div class = "col-lg-4">
+            <div class = "col-lg-4 product-range-bread">
 
-                <img src = "pics/productrange_pics/everyday600g.jpg" onmouseover = "setNewImageThree()" onmouseout = "setOldImageThree()" id = "image3">
+                <img src = "pics/productrange_pics/everyday600g.jpg">
                 <h5>Brown Bread 600g</h5>
                 <p>Barcode: 6009692190284</p>
 
@@ -167,23 +167,23 @@
 
            <div class = "row secondrow">
 
-            <div class = "col-lg-4">
-                <img src = "pics/productrange_pics/everydaywhite700.jpg" onmouseover = "setNewImageFour()" onmouseout = "setOldImageFour()" id = "image4">
+            <div class = "col-lg-4 product-range-bread">
+                <img src = "pics/productrange_pics/everydaywhite700.jpg">
                 <h5>White Bread 700g</h5>
                 <p>Barcode: 6009692190055</p>
             </div>
 
-            <div class = "col-lg-4">
+            <div class = "col-lg-4 product-range-bread">
 
-                <img src = "pics/productrange_pics/everydaywhiteunsliced.jpg" onmouseover = "setNewImageFive()" onmouseout = "setOldImageFive()" id = "image5">
+                <img src = "pics/productrange_pics/everydaywhiteunsliced.jpg">
                 <h5>White Unsliced Bread 700g</h5>
                 <p>Barcode: 6009692190048</p>
 
             </div>
 
-            <div class = "col-lg-4">
+            <div class = "col-lg-4 product-range-bread">
 
-                <img src = "pics/productrange_pics/everydaywhite600.jpg" onmouseover = "setNewImageSix()" onmouseout = "setOldImageSix()" id = "image6">
+                <img src = "pics/productrange_pics/everydaywhite600.jpg">
                 <h5>White Bread 600g</h5>
                 <p>Barcode: 6009692191113</p>
 
@@ -195,14 +195,14 @@
 
            <div class = "row justify-content-center thirdrow">
 
-            <div class = "col-lg-4">
-                <img src = "pics/productrange_pics/farmstyle700.jpg" onmouseover = "setNewImageSeven()" onmouseout = "setOldImageSeven()" id = "image7">
+            <div class = "col-lg-4 product-range-bread">
+                <img src = "pics/productrange_pics/farmstyle700.jpg">
                 <h5>Farmstyle Brown Bread 700g</h5>
                 <p>Barcode: 6009692190277</p>
             </div>
 
-            <div class = "col-lg-4">
-                <img src = "pics/productrange_pics/farmstyle600.jpg" onmouseover = "setNewImageEight()" onmouseout = "setOldImageEight()" id = "image8">
+            <div class = "col-lg-4 product-range-bread">
+                <img src = "pics/productrange_pics/farmstyle600.jpg">
                 <h5>Farmstyle Brown Bread 600g</h5>
                 <p>Barcode: 6009692190291</p>
             </div>
@@ -213,14 +213,14 @@
 
            <div class = "row justify-content-center fourthrow">
 
-              <div class = "col-lg-4">
-                <img src = "pics/productrange_pics/farmstylewhite700.jpg" onmouseover = "setNewImageNine()" onmouseout = "setOldImageNine()" id = "image9">
+              <div class = "col-lg-4 product-range-bread">
+                <img src = "pics/productrange_pics/farmstylewhite700.jpg">
                 <h5>Farmstyle White Bread 700g</h5>
                 <p>Barcode: 6009692190109</p>
               </div>
  
-              <div class = "col-lg-4">
-                 <img src = "pics/productrange_pics/farmstylewhite600.jpg" onmouseover = "setNewImageTen()" onmouseout = "setOldImageTen()" id = "image10">
+              <div class = "col-lg-4 product-range-bread">
+                 <img src = "pics/productrange_pics/farmstylewhite600.jpg">
                  <h5>Farmstyle White Bread 600g</h5>
                  <p>Barcode: 6009692190123</p>
               </div>
@@ -298,7 +298,7 @@
 
     </section>
 
-    <script src = "javascriptfile.js"></script>
+    <!-- <script src = "javascriptfile.js"></script> -->
     <script src = "changeimages.js"></script>
     <script src = "toggleButton.js"></script>
 
