Implemented the image switching function on the buns and rolls page

--- a/BunsAndRolls.html
+++ b/BunsAndRolls.html
@@ -138,14 +138,14 @@
 
             <div class = "row firstRow justify-content-center">
 
-                <div class = "col-lg-4">
-                    <img src = "pics/productrange_pics/hamburger-2.jpg" onmouseover = "setNewBunOne()" onmouseout = "setOldBunOne()" id = "firstBun">
+                <div class = "col-lg-4 bread">
+                    <img src = "pics/productrange_pics/hamburger-2.jpg">
                     <h5>6 Hamburger Buns</h5>
                     <p>Barcode: 6009692193308</p>
                 </div>
 
-                <div class = "col-lg-4">
-                    <img src = "pics/productrange_pics/hotdog-1.jpg" onmouseover = "setNewBunTwo()" onmouseout = "setOldBunTwo()" id = "secondBun">
+                <div class = "col-lg-4 bread">
+                    <img src = "pics/productrange_pics/hotdog-1.jpg">
                     <h5>6 Hot Dog Rolls</h5>
                     <p>Barcode: 6009692193704</p>
                 </div>
@@ -154,14 +154,14 @@
 
             <div class = "row secondRow justify-content-center">
 
-                <div class = "col-lg-4">
-                    <img src = "pics/productrange_pics/lunchbuns-1.jpg" onmouseover = "setNewBunThree()" onmouseout = "setOldBunThree()" id = "thirdBun">
+                <div class = "col-lg-4 bread">
+                    <img src = "pics/productrange_pics/lunchbuns-1.jpg">
                     <h5>12 Lunch Buns</h5>
                     <p>Barcode: 6009692193575</p>
                 </div>
 
-                <div class = "col-lg-4">
-                    <img src = "pics/productrange_pics/megahamburger-1.jpg" onmouseover = "setNewBunFour()" onmouseout = "setOldBunFour()" id = "fourthBun">
+                <div class = "col-lg-4 bread">
+                    <img src = "pics/productrange_pics/megahamburger-1.jpg">
                     <h5>4 Sesame Seed Hamburger Buns</h5>
                     <p>Barcode: 6009692193315</p>
                 </div>
