--- a/ProductRange.html
+++ b/ProductRange.html
@@ -137,7 +137,7 @@
 
            <div class = "row firstrow">
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
 
                 <img src = "pics/productrange_pics/everyday700.jpg">
                 <h5>Brown Bread 700g</h5>
@@ -145,7 +145,7 @@
 
             </div>
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
 
                 <img src = "pics/productrange_pics/unsliced_NEW.jpg">
                 <h5>Brown Unsliced Bread 700g</h5>
@@ -153,7 +153,7 @@
 
             </div>
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
 
                 <img src = "pics/productrange_pics/everyday600g.jpg">
                 <h5>Brown Bread 600g</h5>
@@ -167,13 +167,13 @@
 
            <div class = "row secondrow">
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
                 <img src = "pics/productrange_pics/everydaywhite700.jpg">
                 <h5>White Bread 700g</h5>
                 <p>Barcode: 6009692190055</p>
             </div>
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
 
                 <img src = "pics/productrange_pics/everydaywhiteunsliced.jpg">
                 <h5>White Unsliced Bread 700g</h5>
@@ -181,7 +181,7 @@
 
             </div>
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
 
                 <img src = "pics/productrange_pics/everydaywhite600.jpg">
                 <h5>White Bread 600g</h5>
@@ -195,13 +195,13 @@
 
            <div class = "row justify-content-center thirdrow">
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
                 <img src = "pics/productrange_pics/farmstyle700.jpg">
                 <h5>Farmstyle Brown Bread 700g</h5>
                 <p>Barcode: 6009692190277</p>
             </div>
 
-            <div class = "col-lg-4 product-range-bread">
+            <div class = "col-lg-4 bread">
                 <img src = "pics/productrange_pics/farmstyle600.jpg">
                 <h5>Farmstyle Brown Bread 600g</h5>
                 <p>Barcode: 6009692190291</p>
@@ -213,13 +213,13 @@
 
            <div class = "row justify-content-center fourthrow">
 
-              <div class = "col-lg-4 product-range-bread">
+              <div class = "col-lg-4 bread">
                 <img src = "pics/productrange_pics/farmstylewhite700.jpg">
                 <h5>Farmstyle White Bread 700g</h5>
                 <p>Barcode: 6009692190109</p>
               </div>
  
-              <div class = "col-lg-4 product-range-bread">
+              <div class = "col-lg-4 bread">
                  <img src = "pics/productrange_pics/farmstylewhite600.jpg">
                  <h5>Farmstyle White Bread 600g</h5>
                  <p>Barcode: 6009692190123</p>
