Completed adding the setImages functions for all the pages but there is a bug

--- a/BreadVitaLifeRange.html
+++ b/BreadVitaLifeRange.html
@@ -138,20 +138,20 @@
 
             <div class = "row firstRow">
 
-                <div class = "col-lg-3 column">
-                    <img src = "pics/productrange_pics/vitalifebread_pics/VitaWheat_New.jpg" onmouseover = "newVitaLifeBreadOne()" onmouseout = "oldVitaLifeBreadOne()" id = "firstVitaLifeBread">
+                <div class = "col-lg-3 column bread">
+                    <img src = "pics/productrange_pics/vitalifebread_pics/VitaWheat_New.jpg">
                     <h5>Vita-Life Crushed Wheat Bread 700g</h5>
                     <p>Barcode: 6009692190352</p>
                 </div>
 
-                <div class = "col-lg-3 column2">
-                    <img src = "pics/productrange_pics/vitalifebread_pics/VitaBrown_New.jpg" onmouseover = "newVitaLifeBreadTwo()" onmouseout = "oldVitaLifeBreadTwo()" id = "secondVitaLifeBread">
+                <div class = "col-lg-3 column2 bread">
+                    <img src = "pics/productrange_pics/vitalifebread_pics/VitaBrown_New.jpg">
                     <h5>Vita-Life Brown Bread 700g</h5>
                     <p>Barcode: 6009692190475</p>
                 </div>
 
-                <div class = "col-lg-3 column3">
-                    <img src = "pics/productrange_pics/vitalifebread_pics/VitaWhite_New.jpg" onmouseover = "newVitaLifeBreadThree()" onmouseout = "oldVitaLifeBreadThree()" id = "thirdVitaLifeBread">
+                <div class = "col-lg-3 column3 bread">
+                    <img src = "pics/productrange_pics/vitalifebread_pics/VitaWhite_New.jpg">
                     <h5>Vita-Life White Bread 700g</h5>
                     <p>Barcode: 6009692190468</p>
                 </div>
