--- a/BunsVitaLifeRange.html
+++ b/BunsVitaLifeRange.html
@@ -137,14 +137,14 @@
 
             <div class = "row firstRow justify-content-center">
 
-                <div class = "col-lg-4">
-                    <img src = "pics/productrange_pics/vitalifebuns_pics/2seeded.jpg" onmouseover = "newVitaLifeBunOne()" onmouseout = "oldVitaLifeBunOne()" id = "firstVitaLifeBun">
+                <div class = "col-lg-4 bread">
+                    <img src = "pics/productrange_pics/vitalifebuns_pics/2seeded.jpg">
                     <h5>2 Vita-Life Large Seeded Rolls</h5>
                     <p>Barcode: 6009692191106</p>
                 </div>
 
-                <div class = "col-lg-4">
-                    <img src = "pics/productrange_pics/vitalifebuns_pics/seededcocktail.jpg" onmouseover = "newVitaLifeBunTwo()" onmouseout = "oldVitaLifeBunTwo()" id = "secondVitaLifeBun">
+                <div class = "col-lg-4 bread">
+                    <img src = "pics/productrange_pics/vitalifebuns_pics/seededcocktail.jpg">
                     <h5>6 Vita-Life Cocktail Rolls</h5>
                     <p>Barcode: 6009692193148</p>
                 </div>
