Completed the index page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!--Second dropdown menu starts here-->
 
-        <li><a href = "ProductRange.html" class = "dropable">Product Range<i class = "fa fa-caret-right"></i></a>
+        <li><a href = "ProductRange.html" class = "dropable">Product Range</i></a>
 
           <!--First submenu starts here-->
         
@@ -91,7 +91,7 @@
 
         <!--Second dropdown menu starts here-->
 
-        <li><a href = "#">Competitions<i class = "fa fa-caret-right"></i></a>
+        <li><a href = "#" class = "dropable">Competitions</a>
 
           <!---Second submenu starts here-->
 
@@ -138,27 +138,27 @@
 
         <div class = "homepage-products pagebody">
 
-            <!-- <div class = "row">
+            <div class = "row">
 
-                <div class = "col-lg-4">
+                <div>
                     <h1>Everyday Bread Range</h1>
                     <img src = "pics/homepage_pics/homepagebreadrange.jpg" alt = "">
                     <p>Only the best quality ingredients and nutrients are used.</p>
                 </div>
 
-                <div class = "col-lg-4">
+                <div>
                     <h1>Buns & Rolls Range</h1>
                     <img src = "pics/homepage_pics/bunsandrolls.jpg">
                     <p>With Sunbake’s delicious buns & rolls range, you’ll never be short of flavour or inspiration.</p>
                 </div>
 
-                <div class = "col-lg-4">
+                <div>
                     <h1>Bakeries</h1>
                     <img src = "pics/homepage_pics/bakeries.jpg">
                     <p>Sunbake Bread and Buns & Rolls are manufactured in state of the art HACCP accredited facilities.</p>
                 </div>
 
-            </div> -->
+            </div>
 
         </div>
 
