--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <ul class = "mainMenu">
 
-        <li class = "active"><a href = "index.html">Home</a></li>
+        <li><a href = "index.html">Home</a></li>
         <li><a href = "AboutUs.html">About Us</a></li>
 
         <!--Second dropdown menu starts here-->
