Code that displays icons randomly on contact us page

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -227,9 +227,9 @@
 
                             <div class="icons">
 
-                                <a class="heart"><i class="fa fa-heart"></i></a>
-                                <a class="home"><i class="fa fa-home"></i></a>
-                                <a class="fighter-jet"><i class="fa fa-fighter-jet"></i></a>
+                                <a class="first-icon"><i class="fa fa-heart"></i></a>
+                                <a class="second-icon"><i class="fa fa-home"></i></a>
+                                <a class="third-icon"><i class="fa fa-fighter-jet"></i></a>
 
                             </div>
 
