Code that randomly picks the name of the icon to be selected

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -223,7 +223,7 @@
                         <textarea id="message" name="message" placeholder="*Message"></textarea>
 
                         <div class="icons-container">
-                            <p>Please prove you are human by selecting the <span class="iconName">House</span></p>
+                            <p>Please prove you are human by selecting the <span class="icon-name">House</span></p>
 
                             <div class="icons">
 
