--- a/ContactUs.html
+++ b/ContactUs.html
@@ -227,13 +227,15 @@
 
                             <div class="icons">
 
-                                <a class="first-icon"><i class="fa fa-heart"></i></a>
-                                <a class="second-icon"><i class="fa fa-home"></i></a>
-                                <a class="third-icon"><i class="fa fa-fighter-jet"></i></a>
+                                <a class="first-icon icon"><i class="fa fa-heart"></i></a>
+                                <a class="second-icon icon"><i class="fa fa-home"></i></a>
+                                <a class="third-icon icon"><i class="fa fa-fighter-jet"></i></a>
 
                             </div>
 
                         </div>
+
+                        <p class = "icon-error-text"></p>
 
                         <button class="submitForm" name="submit" type="submit" value="Submit">Send</button>
 
