Completed the bread vita life range page

--- a/ProductRange.html
+++ b/ProductRange.html
@@ -134,7 +134,7 @@
 
     <h1 class="pageband">Everyday Bread Range</h1>
 
-    <div class="breads">
+    <div class="everyday-range-breads">
 
       <div class="brown-bread">
 
