Completed the everyday buns and rolls range page

--- a/ProductRange.html
+++ b/ProductRange.html
@@ -138,7 +138,7 @@
 
       <div class="brown-bread">
 
-        <div class="bread">
+        <div class="bakery-item">
 
           <img src="pics/productrange_pics/everyday700.jpg">
           <h5>Brown Bread 700g</h5>
@@ -146,7 +146,7 @@
 
         </div>
 
-        <div class="bread">
+        <div class="bakery-item">
 
           <img src="pics/productrange_pics/unsliced_NEW.jpg">
           <h5>Brown Unsliced Bread 700g</h5>
@@ -154,7 +154,7 @@
 
         </div>
 
-        <div class="bread">
+        <div class="bakery-item">
 
           <img src="pics/productrange_pics/everyday600g.jpg">
           <h5>Brown Bread 600g</h5>
@@ -166,13 +166,13 @@
 
       <div class = "white-bread">
 
-        <div class="bread">
+        <div class="bakery-item">
           <img src="pics/productrange_pics/everydaywhite700.jpg">
           <h5>White Bread 700g</h5>
           <p>Barcode: 6009692190055</p>
         </div>
   
-        <div class="bread">
+        <div class="bakery-item">
   
           <img src="pics/productrange_pics/everydaywhiteunsliced.jpg">
           <h5>White Unsliced Bread 700g</h5>
@@ -180,7 +180,7 @@
   
         </div>
   
-        <div class="bread">
+        <div class="bakery-item">
   
           <img src="pics/productrange_pics/everydaywhite600.jpg">
           <h5>White Bread 600g</h5>
@@ -192,25 +192,25 @@
 
       <div class = "farmstyle-bread">
 
-        <div class="bread">
+        <div class="bakery-item">
           <img src="pics/productrange_pics/farmstyle700.jpg">
           <h5>Farmstyle Brown Bread 700g</h5>
           <p>Barcode: 6009692190277</p>
         </div>
   
-        <div class="bread">
+        <div class="bakery-item">
           <img src="pics/productrange_pics/farmstyle600.jpg">
           <h5>Farmstyle Brown Bread 600g</h5>
           <p>Barcode: 6009692190291</p>
         </div>
   
-        <div class="bread">
+        <div class="bakery-item">
           <img src="pics/productrange_pics/farmstylewhite700.jpg">
           <h5>Farmstyle White Bread 700g</h5>
           <p>Barcode: 6009692190109</p>
         </div>
   
-        <div class="bread">
+        <div class="bakery-item">
           <img src="pics/productrange_pics/farmstylewhite600.jpg">
           <h5>Farmstyle White Bread 600g</h5>
           <p>Barcode: 6009692190123</p>
