Completed the terms and conditions page

--- a/BreadVitaLifeRange.html
+++ b/BreadVitaLifeRange.html
@@ -97,7 +97,7 @@
 
           <ul class = "subMenu second">
             <hr class = "dropdownDivider"></hr>
-            <li><a href = "CompetitionWinners.html">T&C's</a></li>
+            <li><a href = "tcs.html">T&C's</a></li>
           </ul>
 
         </li>
@@ -122,7 +122,7 @@
 
         <div class = "vita-life-bread-body pagebody">
 
-            <h1 class = "pageband vitaLife">Vita-Life Bread Range</h1>
+            <h1 class = "pageband vita-life">Vita-Life Bread Range</h1>
 
                 <div class="vita-life-breads">
                 
