--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <ul class = "subMenu second">
             <hr class = "dropdownDivider"></hr>
-            <li><a href = "CompetitionWinners.html">T&C's</a></li>
+            <li><a href = "tcs.html">T&C's</a></li>
           </ul>
 
         </li>
@@ -117,7 +117,7 @@
           <ul id="slides">
         
             <li class="slide showing">
-              <a href="CompetitionWinners.html"></a>
+              <a href="tcs.html"></a>
             </li>
         
             <li class="slide">
