--- a/Recipes.html
+++ b/Recipes.html
@@ -97,7 +97,7 @@
 
           <ul class = "subMenu second">
             <hr class = "dropdownDivider"></hr>
-            <li><a href = "CompetitionWinners.html">T&C's</a></li>
+            <li><a href = "tcs.html">T&C's</a></li>
           </ul>
 
         </li>
