Resolved the issue of images/products on the index page not lining up properly and as well as did media query adjustments at screen size of min-width : 768px

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -128,7 +128,7 @@
 
         <h1 class="pageband">Contact Us</h1>
 
-        <div class="row">
+        <div class="content-wrapper">
 
             <div class = "image-container">
                 <img src="pics/contactus_pics/sandwhich-1.png">
