Re-aligned bakery items on the every bread range page

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -126,7 +126,7 @@
 
   <div class="aboutus-body pagebody">
 
-    <div class="row">
+    <div class="about-us-content">
 
       <div>
         <img src="pics/aboutuspage_pics/kidedit.png" alt="">
