Completed the rest of the product range including buns&rolls page

--- a/BunsTreatsRange.html
+++ b/BunsTreatsRange.html
@@ -131,28 +131,32 @@
 
     <div class="treats-buns-range">
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/treatsbuns_pics/hotcross-1.jpg">
-        <h5>6 Traditional Hot Cross Buns</h5>
-        <p>Barcode: 6009692193711</p>
-      </div>
+      <div class = "buns-treats">
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/treatsbuns_pics/chocolatecross.jpg">
-        <h5>6 Chocolate Hot Cross Buns</h5>
-        <p>Barcode: 6009692193759</p>
-      </div>
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/treatsbuns_pics/hotcross-1.jpg">
+          <h5>6 Traditional Hot Cross Buns</h5>
+          <p>Barcode: 6009692193711</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/treatsbuns_pics/chocolatecross.jpg">
+          <h5>6 Chocolate Hot Cross Buns</h5>
+          <p>Barcode: 6009692193759</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/treatsbuns_pics/fruitbuns.jpg">
+          <h5>6 Fruit Buns</h5>
+          <p>Barcode: 6009692193285</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/treatsbuns_pics/cheesetreats.jpg">
+          <h5>6 Cheese Rolls</h5>
+          <p>Barcode: 6009692193766</p>
+        </div>
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/treatsbuns_pics/fruitbuns.jpg">
-        <h5>6 Fruit Buns</h5>
-        <p>Barcode: 6009692193285</p>
-      </div>
-
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/treatsbuns_pics/cheesetreats.jpg">
-        <h5>6 Cheese Rolls</h5>
-        <p>Barcode: 6009692193766</p>
       </div>
 
     </div>
