--- a/BunsAndRolls.html
+++ b/BunsAndRolls.html
@@ -132,29 +132,32 @@
 
     <div class="everyday-buns-and-rolls">
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/hamburger-2.jpg">
-        <h5>6 Hamburger Buns</h5>
-        <p>Barcode: 6009692193308</p>
-      </div>
+      <div class = "buns-and-rolls">
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/hotdog-1.jpg">
-        <h5>6 Hot Dog Rolls</h5>
-        <p>Barcode: 6009692193704</p>
-      </div>
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/hamburger-2.jpg">
+          <h5>6 Hamburger Buns</h5>
+          <p>Barcode: 6009692193308</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/hotdog-1.jpg">
+          <h5>6 Hot Dog Rolls</h5>
+          <p>Barcode: 6009692193704</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/lunchbuns-1.jpg">
+          <h5>12 Lunch Buns</h5>
+          <p>Barcode: 6009692193575</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/megahamburger-1.jpg">
+          <h5>4 Sesame Seed Hamburger Buns</h5>
+          <p>Barcode: 6009692193315</p>
+        </div>
 
-
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/lunchbuns-1.jpg">
-        <h5>12 Lunch Buns</h5>
-        <p>Barcode: 6009692193575</p>
-      </div>
-
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/megahamburger-1.jpg">
-        <h5>4 Sesame Seed Hamburger Buns</h5>
-        <p>Barcode: 6009692193315</p>
       </div>
 
     </div>
