--- a/BunsVitaLifeRange.html
+++ b/BunsVitaLifeRange.html
@@ -132,16 +132,20 @@
 
     <div class="vita-life-buns">
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/vitalifebuns_pics/2seeded.jpg">
-        <h5>2 Vita-Life Large Seeded Rolls</h5>
-        <p>Barcode: 6009692191106</p>
-      </div>
+      <div class = "vita-buns">
 
-      <div class="bakery-item">
-        <img src="pics/productrange_pics/vitalifebuns_pics/seededcocktail.jpg">
-        <h5>6 Vita-Life Cocktail Rolls</h5>
-        <p>Barcode: 6009692193148</p>
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/vitalifebuns_pics/2seeded.jpg">
+          <h5>2 Vita-Life Large Seeded Rolls</h5>
+          <p>Barcode: 6009692191106</p>
+        </div>
+  
+        <div class="bakery-item">
+          <img src="pics/productrange_pics/vitalifebuns_pics/seededcocktail.jpg">
+          <h5>6 Vita-Life Cocktail Rolls</h5>
+          <p>Barcode: 6009692193148</p>
+        </div>
+
       </div>
 
     </div>
