Resolved the issue of sitemap links

--- a/BunsTreatsRange.html
+++ b/BunsTreatsRange.html
@@ -131,26 +131,26 @@
 
     <div class="treats-buns-range">
 
-      <div class = "buns-treats">
+      <div class="buns-treats">
 
         <div class="bakery-item">
           <img src="pics/productrange_pics/treatsbuns_pics/hotcross-1.jpg">
           <h5>6 Traditional Hot Cross Buns</h5>
           <p>Barcode: 6009692193711</p>
         </div>
-  
+
         <div class="bakery-item">
           <img src="pics/productrange_pics/treatsbuns_pics/chocolatecross.jpg">
           <h5>6 Chocolate Hot Cross Buns</h5>
           <p>Barcode: 6009692193759</p>
         </div>
-  
+
         <div class="bakery-item">
           <img src="pics/productrange_pics/treatsbuns_pics/fruitbuns.jpg">
           <h5>6 Fruit Buns</h5>
           <p>Barcode: 6009692193285</p>
         </div>
-  
+
         <div class="bakery-item">
           <img src="pics/productrange_pics/treatsbuns_pics/cheesetreats.jpg">
           <h5>6 Cheese Rolls</h5>
@@ -184,42 +184,42 @@
 
         <p>Sitemap : </p>
 
-        <ul class="navbar-nav">
+        <ul>
 
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+          <li>
+            <a href="index.html">Home</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="AboutUs.html">About Us</a>
+          <li>
+            <a href="AboutUs.html">About Us</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="ProductRange.html">Product Range</a>
+          <li>
+            <a href="ProductRange.html">Product Range</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Recipes.html">Recipes</a>
+          <li>
+            <a href="Recipes.html">Recipes</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Downloads.html">Downloads</a>
+          <li>
+            <a href="Downloads.html">Downloads</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Bakeries.html">Bakeries</a>
+          <li>
+            <a href="Bakeries.html">Bakeries</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Competitions.html">Competitions</a>
+          <li>
+            <a href="Competitions.html">Competitions</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="https://rclfoods.com/careeropportunities/">Careers</a>
+          <li>
+            <a href="https://rclfoods.com/careeropportunities/">Careers</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link no-line" href="ContactUs.html">Contact Us</a>
+          <li>
+            <a href="ContactUs.html">Contact Us</a>
           </li>
 
         </ul>
