--- a/BunsVitaLifeRange.html
+++ b/BunsVitaLifeRange.html
@@ -132,14 +132,14 @@
 
     <div class="vita-life-buns">
 
-      <div class = "vita-buns">
+      <div class="vita-buns">
 
         <div class="bakery-item">
           <img src="pics/productrange_pics/vitalifebuns_pics/2seeded.jpg">
           <h5>2 Vita-Life Large Seeded Rolls</h5>
           <p>Barcode: 6009692191106</p>
         </div>
-  
+
         <div class="bakery-item">
           <img src="pics/productrange_pics/vitalifebuns_pics/seededcocktail.jpg">
           <h5>6 Vita-Life Cocktail Rolls</h5>
@@ -174,42 +174,42 @@
 
         <p>Sitemap : </p>
 
-        <ul class="navbar-nav">
+        <ul>
 
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+          <li>
+            <a href="index.html">Home</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="AboutUs.html">About Us</a>
+          <li>
+            <a href="AboutUs.html">About Us</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="ProductRange.html">Product Range</a>
+          <li>
+            <a href="ProductRange.html">Product Range</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Recipes.html">Recipes</a>
+          <li>
+            <a href="Recipes.html">Recipes</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Downloads.html">Downloads</a>
+          <li>
+            <a href="Downloads.html">Downloads</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Bakeries.html">Bakeries</a>
+          <li>
+            <a href="Bakeries.html">Bakeries</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Competitions.html">Competitions</a>
+          <li>
+            <a href="Competitions.html">Competitions</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="https://rclfoods.com/careeropportunities/">Careers</a>
+          <li>
+            <a href="https://rclfoods.com/careeropportunities/">Careers</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link no-line" href="ContactUs.html">Contact Us</a>
+          <li>
+            <a href="ContactUs.html">Contact Us</a>
           </li>
 
         </ul>
@@ -219,7 +219,7 @@
     </div>
 
   </div>
-
+  
   <script src="javascriptfile.js"></script>
   <script src="changeimages.js"></script>
   <script src="toggleButton.js"></script>
