--- a/Competitions.html
+++ b/Competitions.html
@@ -126,17 +126,15 @@
   </div>
 
 
-  <div class="competitionsband">
-    <h1>Competition</h1>
-  </div>
-
   <!--COMPETITION DETAILS  DISPLAYED BELOW-->
 
   <div class="competitions-body pagebody">
 
-    <div class="textPart">
+    <h1 class = "competitions-band pageband">Competition</h1>
 
-      <h1>Sunbake Full of Life Competition</h1>
+    <div class="content-container">
+
+      <h2>Sunbake Full of Life Competition</h2>
 
       <hr class="competitions-line">
 
@@ -165,11 +163,11 @@
         </li>
       </ul>
 
-    </div>
+      <div class="picturesPart">
 
-    <div class="picturesPart">
-
-      <img src="pics/competitions/promotions-2.jpg" alt="">
+        <img src="pics/competitions/promotions-2.jpg" alt="">
+  
+      </div>
 
     </div>
 
@@ -196,42 +194,42 @@
 
         <p>Sitemap : </p>
 
-        <ul class="navbar-nav">
+        <ul>
 
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+          <li>
+            <a href="index.html">Home</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="AboutUs.html">About Us</a>
+          <li>
+            <a href="AboutUs.html">About Us</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="ProductRange.html">Product Range</a>
+          <li>
+            <a href="ProductRange.html">Product Range</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Recipes.html">Recipes</a>
+          <li>
+            <a href="Recipes.html">Recipes</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Downloads.html">Downloads</a>
+          <li>
+            <a href="Downloads.html">Downloads</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Bakeries.html">Bakeries</a>
+          <li>
+            <a href="Bakeries.html">Bakeries</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="Competitions.html">Competitions</a>
+          <li>
+            <a href="Competitions.html">Competitions</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="https://rclfoods.com/careeropportunities/">Careers</a>
+          <li>
+            <a href="https://rclfoods.com/careeropportunities/">Careers</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link no-line" href="ContactUs.html">Contact Us</a>
+          <li>
+            <a href="ContactUs.html">Contact Us</a>
           </li>
 
         </ul>
